--- a/wiki/zh-cn/Workbench_creation.html
+++ b/wiki/zh-cn/Workbench_creation.html
@@ -1,12 +1,13 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">Workbench creation/zh-cn</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="zh-Hans-CN" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-Workbench+creation&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><a href="../de/Workbench_creation.html" class="mw-pt-progress mw-pt-progress--high" title="Erstellung von Arbeitsbereichen (85% translated)" lang="de" dir="ltr">Deutsch</a></li>
+<li><a href="../de/Workbench_creation.html" class="mw-pt-progress mw-pt-progress--complete" title="Erstellung von Arbeitsbereichen (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../Workbench_creation.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Workbench creation (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../es/Workbench_creation.html" class="mw-pt-progress mw-pt-progress--low" title="Workbench creation/es (2% translated)" lang="es" dir="ltr">espa&ntilde;ol</a></li>
-<li><a href="../fr/Workbench_creation.html" class="mw-pt-progress mw-pt-progress--high" title="Cr&eacute;ation d'atelier (85% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
+<li><a href="../fr/Workbench_creation.html" class="mw-pt-progress mw-pt-progress--complete" title="Cr&eacute;ation d'atelier (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
 <li><a href="../it/Workbench_creation.html" class="mw-pt-progress mw-pt-progress--high" title="Creare un Ambiente di lavoro (85% translated)" lang="it" dir="ltr">italiano</a></li>
-<li><a href="../pl/Workbench_creation.html" class="mw-pt-progress mw-pt-progress--high" title="Tworzenie &#347;rodowiska pracy (85% translated)" lang="pl" dir="ltr">polski</a></li>
+<li><a href="../pl/Workbench_creation.html" class="mw-pt-progress mw-pt-progress--complete" title="Tworzenie &#347;rodowiska pracy (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../pt-br/Workbench_creation.html" class="mw-pt-progress mw-pt-progress--med" title="Cria&ccedil;&atilde;o de bancadas de trabalho (23% translated)" lang="pt-BR" dir="ltr">portugu&ecirc;s do Brasil</a></li>
 <li><a href="../ro/Workbench_creation.html" class="mw-pt-progress mw-pt-progress--low" title="Workbench creation/ro (2% translated)" lang="ro" dir="ltr">rom&acirc;n&#259;</a></li>
+<li><a href="../cs/Workbench_creation.html" class="mw-pt-progress mw-pt-progress--low" title="Vytvo&#345;en&iacute; pracovn&iacute; plochy (2% translated)" lang="cs" dir="ltr">&#269;e&scaron;tina</a></li>
 <li><a href="../ru/Workbench_creation.html" class="mw-pt-progress mw-pt-progress--high" title="&#1056;&#1072;&#1079;&#1088;&#1072;&#1073;&#1086;&#1090;&#1082;&#1072; &#1074;&#1077;&#1088;&#1089;&#1090;&#1072;&#1082;&#1072; (85% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li>
 <li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="zh-Hans-CN" dir="ltr">&#20013;&#25991;&#65288;&#20013;&#22269;&#22823;&#38470;&#65289;</span></li>
 <li><a href="../zh-hant/Workbench_creation.html" class="mw-pt-progress mw-pt-progress--low" title="Workbench creation/zh-hant (0% translated)" lang="zh-Hant" dir="ltr">&#20013;&#25991;&#65288;&#32321;&#39636;&#65289;</a></li>
@@ -417,7 +418,7 @@ Another paragraph is created to describe the new standard.  See [<a rel="nofollo
 <h2><span id=".E7.9B.B8.E5.85.B3.E9.93.BE.E6.8E.A5"></span><span class="mw-headline" id="&#30456;&#20851;&#38142;&#25509;">&#30456;&#20851;&#38142;&#25509;</span></h2>
 <ul><li><a href="../index.php?title=Translating_an_external_workbench/zh-cn&amp;action=edit&amp;redlink=1.html" class="new" title="Translating an external workbench/zh-cn (page does not exist)">&#32763;&#35793;&#22806;&#37096;&#24037;&#20316;&#21488;</a></li>
 <li><a rel="nofollow" class="external text" href="https://forum.freecad.org/viewtopic.php?t=47460">&#35770;&#22363;&#35752;&#35770;&#65306;&#21629;&#21517;&#31354;&#38388;&#24037;&#20316;&#21488;</a></li>
-<li><a rel="nofollow" class="external text" href="https://github.com/FreeCAD/freecad.workbench_starterkit">freecad.workbench_starterkit</a></li></ul>
+<li><a rel="nofollow" class="external text" href="https://github.com/FreeCAD/Addon-Template">Addon Template</a></li></ul>
 <p><br>
 </p>
 <div class="docnav">
@@ -447,35 +448,35 @@ Another paragraph is created to describe the new standard.  See [<a rel="nofollo
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20251220220316
+Cached time: 20260121162908
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.111 seconds
-Real time usage: 0.161 seconds
+CPU time usage: 0.101 seconds
+Real time usage: 0.130 seconds
 Preprocessor visited node count: 486/1000000
 Post&#8208;expand include size: 10736/2097152 bytes
 Template argument size: 13089/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 12/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 32653/5000000 bytes
+Unstrip post&#8208;expand size: 32840/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   46.374      1 -total
- 23.01%   10.671      1 Template:Powerdocnavi/zh-cn
- 21.05%    9.760     12 Template:Code
-  9.52%    4.417      1 Template:Navigation_menu_2
-  7.52%    3.487      1 Template:MenuCommand
-  7.24%    3.356      2 Template:Docnav
-  6.58%    3.053     10 Template:Incode
-  6.36%    2.948      1 Template:VersionMinus
-  5.60%    2.596      1 Template:TOCright
-  5.40%    2.503      1 Template:VeryImportantMessage
+100.00%   31.593      1 -total
+ 21.56%    6.811      1 Template:Powerdocnavi/zh-cn
+ 20.63%    6.519     12 Template:Code
+ 10.37%    3.277      2 Template:Docnav
+  9.97%    3.150     10 Template:Incode
+  8.28%    2.615      1 Template:Navigation_menu_2
+  6.05%    1.911      1 Template:TOCright
+  5.96%    1.882      1 Template:VeryImportantMessage
+  5.08%    1.606      5 Template:FileName
+  5.01%    1.583      1 Template:VersionMinus
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:388031-0!canonical and timestamp 20251220220316 and revision id 1718690. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:388031-0!canonical and timestamp 20260121162907 and revision id 1741958. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
