--- a/wiki/Workbench_creation.html
+++ b/wiki/Workbench_creation.html
@@ -403,12 +403,12 @@ Another paragraph is created to describe the new standard.  See [<a rel="nofollo
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260121162217
+Cached time: 20260121163054
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.121 seconds
-Real time usage: 0.148 seconds
+CPU time usage: 0.090 seconds
+Real time usage: 0.117 seconds
 Preprocessor visited node count: 537/1000000
 Post&#8208;expand include size: 9843/2097152 bytes
 Template argument size: 12796/2097152 bytes
@@ -419,19 +419,19 @@ Unstrip post&#8208;expand size: 32845/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   23.657      1 -total
- 21.51%    5.088     12 Template:Code
- 17.11%    4.048      1 Template:Powerdocnavi
-  9.68%    2.290      2 Template:Docnav
-  9.35%    2.211      1 Template:VeryImportantMessage
-  8.31%    1.965      1 Template:Navigation_menu_2
-  6.71%    1.588      1 Template:VersionMinus
-  5.82%    1.376     10 Template:Incode
-  4.97%    1.176      1 Template:MenuCommand
-  4.92%    1.164      5 Template:FileName
+100.00%   27.564      1 -total
+ 20.12%    5.545     12 Template:Code
+ 17.56%    4.839      1 Template:Powerdocnavi
+ 11.46%    3.158      2 Template:Docnav
+  9.64%    2.656      1 Template:Navigation_menu_2
+  7.27%    2.004      1 Template:VeryImportantMessage
+  7.08%    1.951     10 Template:Incode
+  6.93%    1.910      1 Template:TOCright
+  6.34%    1.747      5 Template:FileName
+  5.35%    1.474      1 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:59352-0!canonical and timestamp 20260121162515 and revision id 1741946. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:59352-0!canonical and timestamp 20260121163054 and revision id 1741946. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="site.js"></script>
