--- a/wiki/Cables_Compatibility_with_BIM_Workbench.html
+++ b/wiki/Cables_Compatibility_with_BIM_Workbench.html
@@ -1,5 +1,5 @@
-<link href="site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">Cables Compatibility with BIM Workbench</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="en" dir="ltr"><div class="warning-box"><figure class="mw-halign-left" typeof="mw:File"><span><img src="https://upload.wikimedia.org/wikipedia/commons/d/d5/Under_construction_icon-blue.svg" decoding="async" width="45" height="38" class="mw-file-element" data-file-width="600" data-file-height="500"></span><figcaption></figcaption></figure> This documentation is a work in progress. Please don't mark it as translatable since it will change in the next hours and days.
-</div>
+<link href="site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">Cables Compatibility with BIM Workbench</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="en" dir="ltr"><p><br>
+</p>
 <h2><span class="mw-headline" id="Compatibility_table_of_the_Cables_Workbench_with_the_BIM_Workbench">Compatibility table of the Cables Workbench with the BIM Workbench</span></h2>
 <p>The table below contains a summary of areas in which the elements created in <a href="Cables_Workbench.html" title="Cables Workbench">Cables Workbench</a> match the rules and structure from <a href="BIM_Workbench.html" title="BIM Workbench">BIM Workbench</a>.
 </p><p>Elements are understood to be all objects with a shape type solid or compound of solids. There are currently six such objects in Cables Workbench: <a href="Cables_Cable.html" title="Cables Cable">Cable</a>, <a href="Cables_CableConduit.html" title="Cables CableConduit">CableConduit</a>, <a href="Cables_CableBox.html" title="Cables CableBox">CableBox</a>, <a href="Cables_CableConnector.html" title="Cables CableConnector">CableConnector</a>, <a href="Cables_CableLightPoint.html" title="Cables CableLightPoint">CableLightPoint</a>, <a href="Cables_ElectricalDevice.html" title="Cables ElectricalDevice">ElectricalDevice</a>
@@ -102,29 +102,27 @@
 </p>
 <!-- 
 NewPP limit report
-Cached time: 20260118194334
+Cached time: 20260121173753
 Cache expiry: 86400
 Reduced expiry: false
 Complications: []
-CPU time usage: 0.024 seconds
-Real time usage: 0.028 seconds
-Preprocessor visited node count: 101/1000000
-Post&#8208;expand include size: 670/2097152 bytes
-Template argument size: 186/2097152 bytes
-Highest expansion depth: 4/100
+CPU time usage: 0.012 seconds
+Real time usage: 0.015 seconds
+Preprocessor visited node count: 92/1000000
+Post&#8208;expand include size: 207/2097152 bytes
+Template argument size: 0/2097152 bytes
+Highest expansion depth: 3/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
 Unstrip post&#8208;expand size: 0/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    4.940      1 -total
- 63.48%    3.136      1 Template:Page_in_progress
- 34.35%    1.697      1 Template:Prettytable
- 24.63%    1.217      1 Template:VeryImportantMessage
+100.00%    1.956      1 Template:Prettytable
+100.00%    1.956      1 -total
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411514-0!canonical and timestamp 20260118194340 and revision id 1740792. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411514-0!canonical and timestamp 20260121173805 and revision id 1741975. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="site.js"></script>
