--- a/wiki/pl/Workbench_creation.html
+++ b/wiki/pl/Workbench_creation.html
@@ -4,7 +4,7 @@
 <li><a href="../es/Workbench_creation.html" class="mw-pt-progress mw-pt-progress--low" title="Workbench creation/es (2% translated)" lang="es" dir="ltr">espa&ntilde;ol</a></li>
 <li><a href="../fr/Workbench_creation.html" class="mw-pt-progress mw-pt-progress--high" title="Cr&eacute;ation d'atelier (98% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
 <li><a href="../it/Workbench_creation.html" class="mw-pt-progress mw-pt-progress--high" title="Creare un Ambiente di lavoro (83% translated)" lang="it" dir="ltr">italiano</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="pl" dir="ltr">polski</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="pl" dir="ltr">polski</span></li>
 <li><a href="../pt-br/Workbench_creation.html" class="mw-pt-progress mw-pt-progress--med" title="Cria&ccedil;&atilde;o de bancadas de trabalho (23% translated)" lang="pt-BR" dir="ltr">portugu&ecirc;s do Brasil</a></li>
 <li><a href="../ro/Workbench_creation.html" class="mw-pt-progress mw-pt-progress--low" title="Workbench creation/ro (2% translated)" lang="ro" dir="ltr">rom&acirc;n&#259;</a></li>
 <li><a href="../cs/Workbench_creation.html" class="mw-pt-progress mw-pt-progress--low" title="Vytvo&#345;en&iacute; pracovn&iacute; plochy (2% translated)" lang="cs" dir="ltr">&#269;e&scaron;tina</a></li>
@@ -398,11 +398,9 @@ Utworzono kolejny akapit w celu opisania nowego standardu. Zobacz [<a rel="nofol
 </p><p><span id="Related"></span>
 </p>
 <h2><span id="Powi.C4.85zane"></span><span class="mw-headline" id="Powi&#261;zane">Powi&#261;zane</span></h2>
-<div class="mw-translate-fuzzy">
 <ul><li><a href="../pl/Translating_an_external_workbench.html" title="Translating an external workbench/pl">T&#322;umaczenie interfejsu zewn&#281;trznych &#347;rodowisk pracy</a></li>
 <li><a rel="nofollow" class="external text" href="https://forum.freecad.org/viewtopic.php?t=47460">Dyskusja na forum: Namespaced Workbenches</a></li>
 <li><a rel="nofollow" class="external text" href="https://github.com/FreeCAD/Addon-Template">Addon Template</a></li></ul>
-</div>
 <p><br>
 </p>
 <div class="docnav">
@@ -432,35 +430,35 @@ Utworzono kolejny akapit w celu opisania nowego standardu. Zobacz [<a rel="nofol
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260121163104
+Cached time: 20260121175558
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.104 seconds
-Real time usage: 0.254 seconds
-Preprocessor visited node count: 435/1000000
+CPU time usage: 0.122 seconds
+Real time usage: 1.096 seconds
+Preprocessor visited node count: 434/1000000
 Post&#8208;expand include size: 10760/2097152 bytes
 Template argument size: 13269/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 12/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 32819/5000000 bytes
+Unstrip post&#8208;expand size: 32823/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   61.895      1 -total
- 32.97%   20.406     12 Template:Code
- 23.61%   14.611      1 Template:Powerdocnavi/pl
- 10.34%    6.401      1 Template:Navigation_menu_2
-  7.23%    4.478      1 Template:VersionMinus/pl
-  5.77%    3.571      1 Template:MenuCommand
-  4.37%    2.705     10 Template:Incode
-  3.61%    2.236      2 Template:Docnav/pl
-  3.18%    1.967      1 Template:VersionPlus/pl
-  2.52%    1.561      1 Template:TOCright
+100.00%  934.843      1 -total
+ 97.11%  907.813     12 Template:Code
+  0.61%    5.687      1 Template:Powerdocnavi/pl
+  0.33%    3.090      2 Template:Docnav/pl
+  0.29%    2.717     10 Template:Incode
+  0.27%    2.559      1 Template:VersionPlus/pl
+  0.25%    2.359      5 Template:FileName
+  0.23%    2.189      1 Template:VeryImportantMessage
+  0.23%    2.122      1 Template:TOCright
+  0.18%    1.727      1 Template:VersionMinus/pl
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:200239-0!canonical and timestamp 20260121163104 and revision id 1741967. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:200239-0!canonical and timestamp 20260121175555 and revision id 1741977. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
