--- a/wiki/pl/Std_ProjectUtil.html
+++ b/wiki/pl/Std_ProjectUtil.html
@@ -4,7 +4,7 @@
 <li><a href="../es/Std_ProjectUtil.html" class="mw-pt-progress mw-pt-progress--med" title="Std ProjectoUtil (56% translated)" lang="es" dir="ltr">espa&ntilde;ol</a></li>
 <li><a href="../fr/Std_ProjectUtil.html" class="mw-pt-progress mw-pt-progress--high" title="Std Utilitaire de projet (94% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
 <li><a href="../it/Std_ProjectUtil.html" class="mw-pt-progress mw-pt-progress--high" title="Strumenti: Utilit&agrave; di progetto (75% translated)" lang="it" dir="ltr">italiano</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="pl" dir="ltr">polski</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="pl" dir="ltr">polski</span></li>
 <li><a href="../pt-br/Std_ProjectUtil.html" class="mw-pt-progress mw-pt-progress--med" title="Std ProjectUtil (25% translated)" lang="pt-BR" dir="ltr">portugu&ecirc;s do Brasil</a></li>
 <li><a href="../ru/Std_ProjectUtil.html" class="mw-pt-progress mw-pt-progress--med" title='&#1050;&#1086;&#1084;&#1072;&#1085;&#1076;&#1072; "&#1059;&#1090;&#1080;&#1083;&#1080;&#1090;&#1072; &#1088;&#1072;&#1089;&#1087;&#1072;&#1082;&#1086;&#1074;&#1082;&#1080; &#1092;&#1072;&#1081;&#1083;&#1072; &#1087;&#1088;&#1086;&#1077;&#1082;&#1090;&#1072;..." (31% translated)' lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li></ul></div>
 <div class="docnav">
@@ -77,11 +77,8 @@
 <p><span id="Manual_edits"></span>
 </p>
 <h3><span class="mw-headline" id="Edycja_samodzielna">Edycja samodzielna</span></h3>
-<div class="mw-translate-fuzzy">
-<p>Wa&#380;ne jest, aby zda&#263; sobie spraw&#281;, &#380;e pliki wewn&#261;trz pliku projektu FreeCAD s&#261; ze sob&#261; powi&#261;zane. Edycja tylko jednego pliku zazwyczaj prowadzi do b&#322;&#281;d&oacute;w. Aby dokona&#263; sp&oacute;jnych edycji w wielu plikach, u&#380;yj dobrego edytora kodu, takiego jak <a rel="nofollow" class="external text" href="http://notepad-plus-plus.org/">Notepad++</a> (dla systemu operacyjnego Windows) lub <a rel="nofollow" class="external text" href="https://notepadqq.com/s/">Notepadqq</a> (dla systemu operacyjnego Linux).
-</p>
-</div>
-<p><span id="Create_Document"></span>
+<p>Wa&#380;ne jest, aby zda&#263; sobie spraw&#281;, &#380;e pliki wewn&#261;trz dokumentu FreeCAD s&#261; ze sob&#261; powi&#261;zane. Edycja tylko jednego pliku zazwyczaj prowadzi do b&#322;&#281;d&oacute;w. Aby dokona&#263; sp&oacute;jnych edycji w wielu plikach, u&#380;yj dobrego edytora kodu, takiego jak <a rel="nofollow" class="external text" href="http://notepad-plus-plus.org/">Notepad++</a> (dla systemu operacyjnego Windows), <a rel="nofollow" class="external text" href="https://notepadqq.com/s/">Notepadqq</a> (dla systemu operacyjnego Linux) lub <a rel="nofollow" class="external text" href="https://vscodium.com/">VSCodium</a> (dla systemu operacyjnego Mac lub innych).
+</p><p><span id="Create_Document"></span>
 </p>
 <h3><span id="Utw.C3.B3rz_projekt"></span><span class="mw-headline" id="Utw&oacute;rz_projekt">Utw&oacute;rz projekt</span></h3>
 <ol><li>Wybierz z menu opcj&#281; <b>Przybory &rarr; <span typeof="mw:File"><a href="../index.php?title=Std_ProjectUtil.svg&amp;filetimestamp=20240411193650&amp;.html" class="mw-file-description"><img src="../File/Std_ProjectUtil.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Narz&#281;dzie dokumentu ...</b>.</li>
@@ -155,35 +152,35 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260121160028
+Cached time: 20260121180304
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.141 seconds
-Real time usage: 0.179 seconds
-Preprocessor visited node count: 317/1000000
+CPU time usage: 0.112 seconds
+Real time usage: 0.410 seconds
+Preprocessor visited node count: 316/1000000
 Post&#8208;expand include size: 31263/2097152 bytes
 Template argument size: 11529/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 1744/5000000 bytes
+Unstrip post&#8208;expand size: 1748/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   36.825      1 -total
- 21.12%    7.776      1 Template:Std_Base_navi/pl
- 13.21%    4.864      1 Template:CheckBox
- 12.17%    4.481      1 Template:GuiCommand/pl
- 11.28%    4.154      1 Template:Userdocnavi/pl
-  9.14%    3.366      2 Template:Docnav
-  9.06%    3.335      2 Template:Navigation_menu_2
-  7.39%    2.723      4 Template:FileName
-  7.06%    2.599      8 Template:Button
-  6.53%    2.404      1 Template:Caption
+100.00%   72.056      1 -total
+ 35.68%   25.712      1 Template:Std_Base_navi/pl
+ 16.73%   12.052      1 Template:GuiCommand/pl
+ 16.17%   11.650      1 Template:Caption
+ 10.53%    7.587      1 Template:Userdocnavi/pl
+  7.15%    5.150      4 Template:FileName
+  4.34%    3.130      2 Template:Navigation_menu_2
+  4.04%    2.908      2 Template:Docnav
+  3.21%    2.314      1 Template:CheckBox
+  2.21%    1.594      8 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:236268-0!canonical and timestamp 20260121160028 and revision id 1741927. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:236268-0!canonical and timestamp 20260121180303 and revision id 1741979. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
