--- a/wiki/pl/File_Format_FCStd.html
+++ b/wiki/pl/File_Format_FCStd.html
@@ -149,10 +149,8 @@
 <p><span id="Embedding_other_files"></span>
 </p>
 <h2><span id="Osadzanie_innych_plik.C3.B3w"></span><span class="mw-headline" id="Osadzanie_innych_plik&oacute;w">Osadzanie innych plik&oacute;w</span></h2>
-<div class="mw-translate-fuzzy">
-<p>Aby osadzi&#263; inne typy plik&oacute;w w pliku FCStd, musisz najpierw utworzy&#263; plik typu <a href="../pl/Scripted_objects.html" title="Scripted objects/pl">obiekt skryptowy</a> z <a href="../pl/Python_console.html" class="mw-redirect" title="Python console/pl">konsoli Python</a>, i nadaj mu w&#322;a&#347;ciwo&#347;&#263; <code>App::PropertyFileIncluded</code>
+<p>Aby osadzi&#263; inne typy plik&oacute;w w pliku FCStd, musisz najpierw utworzy&#263; plik typu <a href="../pl/Scripted_objects.html" title="Scripted objects/pl">obiekt skryptowy</a> z <a href="../pl/Python_Console.html" title="Python Console/pl">Konsoli Pythona</a> i nadaj mu w&#322;a&#347;ciwo&#347;&#263; <code>App::PropertyFileIncluded</code>.
 </p>
-</div>
 <div class="mw-translate-fuzzy">
 <p>Nast&#281;pnie w <a href="../pl/Property_editor.html" class="mw-redirect" title="Property editor/pl">edytorze w&#322;a&#347;ciwo&#347;ci</a> mo&#380;esz przej&#347;&#263; do dodanej w&#322;a&#347;ciwo&#347;ci i wybra&#263; plik na komputerze. Po zapisaniu pliku FCStd plik przypisany do w&#322;a&#347;ciwo&#347;ci <span style="font-size: 0.6em;padding-right:10px;">DANE</span><b>DataPropertyFileIncluded</b> zostanie umieszczony w pliku <code>.FCStd</code>. Gdy dokument zostanie przywr&oacute;cony, ten sam plik zostanie przywr&oacute;cony z w&#322;a&#347;ciwo&#347;ci&#261; <span style="font-size: 0.6em;padding-right:10px;">DANE</span><b>PropertyFileIncluded</b>.
 </p>
@@ -184,13 +182,13 @@
 <div style="clear:both"></div>
 <!-- 
 NewPP limit report
-Cached time: 20260121160314
+Cached time: 20260121180334
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.073 seconds
-Real time usage: 0.096 seconds
-Preprocessor visited node count: 253/1000000
+CPU time usage: 0.080 seconds
+Real time usage: 0.167 seconds
+Preprocessor visited node count: 252/1000000
 Post&#8208;expand include size: 8023/2097152 bytes
 Template argument size: 5957/2097152 bytes
 Highest expansion depth: 5/100
@@ -200,18 +198,18 @@ Unstrip post&#8208;expand size: 20660/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   24.956      1 -total
- 24.16%    6.029      1 Template:Userdocnavi/pl
- 20.14%    5.026      2 Template:PropertyData/pl
- 12.33%    3.076      2 Template:Code
-  9.67%    2.414      1 Template:Navigation_menu_2
-  9.59%    2.393      2 Template:Incode
-  8.86%    2.212      1 Template:Clear
-  8.26%    2.060     16 Template:FileName
-  7.32%    1.827      1 Template:TOCright
+100.00%   35.453      1 -total
+ 26.97%    9.561      1 Template:Userdocnavi/pl
+ 14.17%    5.023      2 Template:PropertyData/pl
+ 12.60%    4.467     16 Template:FileName
+ 12.11%    4.294      1 Template:TOCright
+ 10.50%    3.723      1 Template:Navigation_menu_2
+ 10.42%    3.695      2 Template:Code
+  8.19%    2.903      1 Template:Clear
+  8.15%    2.888      2 Template:Incode
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:58759-0!canonical and timestamp 20260121160314 and revision id 1741941. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:58759-0!canonical and timestamp 20260121180334 and revision id 1741981. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
