--- a/wiki/pl/Macro_FCCircularText.html
+++ b/wiki/pl/Macro_FCCircularText.html
@@ -410,11 +410,9 @@ Je&#347;li polecenie nie jest u&#380;ywane w wybranej opcji, zostanie wyszarzone
 </p><div style="clear:both"></div>
 <figure class="mw-default-size mw-halign-left" typeof="mw:File"><a href="../index.php?title=FCCircularText_17.png&amp;filetimestamp=20200601150530&amp;.html" class="mw-file-description"><img src="../File/FCCircularText_17.png" decoding="async" width="492" height="131" class="mw-file-element" data-file-width="492" data-file-height="131"></a><figcaption></figcaption></figure><p><span typeof="mw:File"><a href="../index.php?title=FCCircularText_37.png&amp;filetimestamp=20141124203510&amp;.html" class="mw-file-description"><img src="../File/FCCircularText_37.png" decoding="async" width="200" height="128" class="mw-file-element" data-file-width="720" data-file-height="462"></a></span>
 </p><div style="clear:both"></div>
-<div class="mw-translate-fuzzy">
 <ul><li>Je&#347;li <b>Liczba &#347;cian podpory</b> jest r&oacute;wna zero, podpory nie ma.</li>
 <li><span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">Mode Roman</span>&nbsp;: Zapisy b&#281;d&#261; w cyfrach rzymskich <b>I II III IIII V VI VII VIII IX X XI XII</b></li>
 <li><span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">Axial</span>&nbsp;: Cyfry zostan&#261; zapisane osiowo.</li></ul>
-</div>
 <p><span id="Path_section"></span>
 </p>
 <h3><span id="Sekcja_.C5.9Bcie.C5.BCki"></span><span class="mw-headline" id="Sekcja_&#347;cie&#380;ki">Sekcja &#347;cie&#380;ki</span></h3>
@@ -983,13 +981,13 @@ Tryb reliefu:
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260121181608
+Cached time: 20260121181725
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.433 seconds
-Real time usage: 0.594 seconds
-Preprocessor visited node count: 1530/1000000
+CPU time usage: 0.405 seconds
+Real time usage: 0.597 seconds
+Preprocessor visited node count: 1529/1000000
 Post&#8208;expand include size: 41963/2097152 bytes
 Template argument size: 13297/2097152 bytes
 Highest expansion depth: 6/100
@@ -999,19 +997,19 @@ Unstrip post&#8208;expand size: 66939/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  317.844      1 -total
-  3.21%   10.208      1 Template:Draft_Tools_navi/pl
-  2.61%    8.290      6 Template:SpinBox
-  1.94%    6.176      2 Template:Navigation_menu_2
-  1.80%    5.730      1 Template:Macro/pl
-  1.52%    4.844      1 Template:Userdocnavi/pl
-  1.38%    4.401      3 Template:ColoredText
-  1.37%    4.344     10 Template:Code
-  1.19%    3.775     14 Template:Incode
-  1.08%    3.444      1 Template:MenuCommand
+100.00%  396.143      1 -total
+  1.21%    4.788      3 Template:ColoredText
+  1.14%    4.528      7 Template:RadioButton
+  1.14%    4.504      1 Template:Macro/pl
+  1.02%    4.023     10 Template:Code
+  0.96%    3.807      1 Template:Draft_Tools_navi/pl
+  0.92%    3.632      6 Template:SpinBox
+  0.91%    3.597     22 Template:Button
+  0.88%    3.498     10 Template:CheckBox
+  0.83%    3.275      1 Template:Codeextralink
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:253295-0!canonical and timestamp 20260121181607 and revision id 1742023. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:253295-0!canonical and timestamp 20260121181725 and revision id 1742025. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
