--- a/wiki/pl/Macro_FCCircularText.html
+++ b/wiki/pl/Macro_FCCircularText.html
@@ -419,10 +419,8 @@ Je&#347;li polecenie nie jest u&#380;ywane w wybranej opcji, zostanie wyszarzone
 <p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=FCCircularText_06_Path.png&amp;filetimestamp=20210315204329&amp;.html" class="mw-file-description"><img src="../File/FCCircularText_06_Path.png" decoding="async" width="520" height="712" class="mw-file-element" data-file-width="520" data-file-height="712"></a></span>
 </p>
 <div style="clear:both"></div>
-<div class="mw-translate-fuzzy">
-<p>Sekcja tytu&#322;u zmienia si&#281; i wy&#347;wietla d&#322;ugo&#347;&#263; wybranego przewodu.
+<p>Sekcja tytu&#322;u zmienia si&#281; i wy&#347;wietla d&#322;ugo&#347;&#263; wybranej polilinii.
 </p>
-</div>
 <div class="mw-translate-fuzzy">
 <p>Je&#347;li wybierzesz jedn&#261; polilini&#281;, &#322;uk, okr&#261;g, lini&#281; lub kraw&#281;d&#378;, sekcja &#346;cie&#380;ka jest pod&#347;wietlona kolorem <span style="background-color: #E0F8E0">zielonym</span>, a niewykorzystane polecenia s&#261; oznaczone kolorem <span style="background-color: #F8E0E0">czerwonym</span>.
 </p>
@@ -981,13 +979,13 @@ Tryb reliefu:
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260121181725
+Cached time: 20260121181740
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.405 seconds
-Real time usage: 0.597 seconds
-Preprocessor visited node count: 1529/1000000
+CPU time usage: 0.421 seconds
+Real time usage: 0.660 seconds
+Preprocessor visited node count: 1528/1000000
 Post&#8208;expand include size: 41963/2097152 bytes
 Template argument size: 13297/2097152 bytes
 Highest expansion depth: 6/100
@@ -997,19 +995,19 @@ Unstrip post&#8208;expand size: 66939/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  396.143      1 -total
-  1.21%    4.788      3 Template:ColoredText
-  1.14%    4.528      7 Template:RadioButton
-  1.14%    4.504      1 Template:Macro/pl
-  1.02%    4.023     10 Template:Code
-  0.96%    3.807      1 Template:Draft_Tools_navi/pl
-  0.92%    3.632      6 Template:SpinBox
-  0.91%    3.597     22 Template:Button
-  0.88%    3.498     10 Template:CheckBox
-  0.83%    3.275      1 Template:Codeextralink
+100.00%  405.652      1 -total
+  3.44%   13.950     18 Template:FALSE
+  1.83%    7.437     14 Template:TRUE
+  1.58%    6.404      1 Template:Draft_Tools_navi/pl
+  1.55%    6.282     10 Template:CheckBox
+  1.50%    6.103     10 Template:Code
+  1.31%    5.302      1 Template:Macro/pl
+  1.09%    4.439      7 Template:RadioButton
+  1.07%    4.339      1 Template:Codeextralink
+  1.06%    4.305      3 Template:ColoredText
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:253295-0!canonical and timestamp 20260121181725 and revision id 1742025. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:253295-0!canonical and timestamp 20260121181739 and revision id 1742027. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
