--- a/wiki/pl/Macro_FCCircularText.html
+++ b/wiki/pl/Macro_FCCircularText.html
@@ -427,11 +427,8 @@ Je&#347;li polecenie nie jest u&#380;ywane w wybranej opcji, zostanie wyszarzone
 <ol><li><span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 0px 10px 1px 10px; font-weight:normal;"><span typeof="mw:File"><a href="../index.php?title=RadioButtonFalse.svg&amp;filetimestamp=20200323161942&amp;.html" class="mw-file-description"><img src="../File/RadioButtonFalse.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> BB Base<span></span></span> punkt bazowy znaku jest ustawiony na punkcie &#347;cie&#380;ki na polilinii</li>
 <li><span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 0px 10px 1px 10px; font-weight:normal;"><span typeof="mw:File"><a href="../index.php?title=RadioButtonFalse.svg&amp;filetimestamp=20200323161942&amp;.html" class="mw-file-description"><img src="../File/RadioButtonFalse.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> BB Center<span></span></span> &#347;rodek obwiedni (bounding box) znaku jest ustawiony na punkcie &#347;cie&#380;ki na polilinii</li>
 <li><span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 0px 10px 1px 10px; font-weight:normal;"><span typeof="mw:File"><a href="../index.php?title=RadioButtonFalse.svg&amp;filetimestamp=20200323161942&amp;.html" class="mw-file-description"><img src="../File/RadioButtonFalse.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> BB Top<span></span></span> g&oacute;rna kraw&#281;d&#378; obwiedni (bounding box) znaku jest ustawiona na punkcie &#347;cie&#380;ki na polilinii</li></ol>
-<div class="mw-translate-fuzzy">
-<p>Ostatni u&#380;yty przycisk jest zapisywany w parametrze FreeCAD.
-</p>
-</div>
-<p><span id="Command_section"></span>
+<p>Ostatni u&#380;yty przycisk jest zapisywany w parametrach FreeCAD.
+</p><p><span id="Command_section"></span>
 </p>
 <h3><span class="mw-headline" id="Sekcja_Polecenie">Sekcja Polecenie</span></h3>
 <p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=FCCircularText_13.png&amp;filetimestamp=20210315204604&amp;.html" class="mw-file-description"><img src="../File/FCCircularText_13.png" decoding="async" width="500" height="115" class="mw-file-element" data-file-width="500" data-file-height="115"></a></span>
@@ -976,13 +973,13 @@ Tryb reliefu:
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260121181807
+Cached time: 20260121181824
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.437 seconds
-Real time usage: 0.983 seconds
-Preprocessor visited node count: 1527/1000000
+CPU time usage: 0.505 seconds
+Real time usage: 1.508 seconds
+Preprocessor visited node count: 1526/1000000
 Post&#8208;expand include size: 41963/2097152 bytes
 Template argument size: 13297/2097152 bytes
 Highest expansion depth: 6/100
@@ -992,19 +989,19 @@ Unstrip post&#8208;expand size: 66939/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  547.297      1 -total
-  2.03%   11.102     10 Template:Code
-  1.97%   10.804      6 Template:SpinBox
-  1.81%    9.896      1 Template:Draft_Tools_navi/pl
-  1.80%    9.844      1 Template:Emphasis
-  1.19%    6.493      1 Template:Userdocnavi/pl
-  1.12%    6.123     22 Template:Button
-  1.01%    5.532      1 Template:Macro/pl
-  0.97%    5.295      7 Template:RadioButton
-  0.83%    4.558     10 Template:CheckBox
+100.00%  999.534      1 -total
+  1.44%   14.430     10 Template:CheckBox
+  1.44%   14.416     10 Template:Code
+  1.37%   13.644      1 Template:Draft_Tools_navi/pl
+  1.00%    9.970      1 Template:Userdocnavi/pl
+  0.99%    9.881      7 Template:RadioButton
+  0.89%    8.940     14 Template:TRUE
+  0.72%    7.200      2 Template:Navigation_menu_2
+  0.71%    7.144      1 Template:Macro/pl
+  0.70%    7.015      6 Template:SpinBox
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:253295-0!canonical and timestamp 20260121181806 and revision id 1742029. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:253295-0!canonical and timestamp 20260121181822 and revision id 1742031. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
